[refactor] import 단순화 및 사용되지 않는 DTO 제거 (#377)